syntax = "proto3";
package ClassIsland.Core.Protobuf.Enum;
option csharp_namespace = "ClassIsland.Core.Protobuf.Enum";

enum Retcode {
    None = 0;
    Success = 200;
    ServerInternalError = 500;
    InvalidRequest = 404;
    // service: ClientRegister
    Registered = 10001;
    ClientNotFound = 10002;
    // service: ClientCommandDeliver
    
}