syntax = "proto3";
package ClassIsland.Core.Protobuf.Server;
option csharp_namespace = "ClassIsland.Core.Protobuf.Server";

import "Protobuf/Enum/Retcode.proto";

message ClientRegisterScRsp {
    Enum.Retcode Retcode = 1;
    string Message = 2;
}
